# battleships

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  COPYING  PKGBUILD  README.md  flake.nix  vcpkg.json  vcpkg.json.orig
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
nix/: module.nix  package.nix  shell.nix
src/: main.cpp
src/apps/: client_main.cpp  server_main.cpp
src/game_logic/: field.cpp  logic_models.hpp  models.hpp  player.cpp  ship.cpp
src/game_logic/grids/: base_grid.cpp  board.cpp  radar.cpp
src/game_manager/: game_manager.cpp  game_manager.hpp
src/gui/: game.hpp  game_context.hpp  gui.cpp  gui.hpp  gui_models.hpp  main.cpp  main.hpp  main_menu.cpp  main_menu.hpp  mode_selection.cpp  mode_selection.hpp  scene.hpp  settings.cpp  settings.hpp
src/gui/models/: data_structures.hpp  gui_models.hpp
src/gui/models/widgets/: button.hpp  text_input.hpp  text_label.hpp  widget.hpp  widgets_vector.hpp
src/gui/models/widgets/button/: button.cpp  button.hpp
src/gui/models/widgets/text_input/: text_input.cpp  text_input.hpp
src/gui/models/widgets/text_label/: text_label.cpp  text_label.hpp
src/gui/models/widgets/widgets_vector/: widgets_vector.cpp  widgets_vector.hpp
src/gui/scenes/: all_scenes.hpp  scene.cpp  scene.hpp
src/gui/scenes/game/: game.cpp  game.hpp  game_field.hpp  game_grid.cpp  game_grid.hpp
src/gui/scenes/game_finish/: game_finish.cpp  game_finish.hpp
src/gui/scenes/join_server/: join_server.cpp  join_server.hpp
src/gui/scenes/main_menu/: main_menu.hpp
src/gui/scenes/mode_selection/: mode_selection.cpp  mode_selection.hpp
src/gui/scenes/settings/: settings.cpp  settings.hpp
src/networking/: client.cpp  client.hpp  connection.cpp  connection.hpp  data_types.cpp  data_types.hpp  messages.hpp  network_player.hpp  server.cpp  server.hpp
tests/game_logic/: boards_test.cpp  field_tests.cpp  player_test.cpp  ship_test.cpp
tests/integration_tests/: integration.cpp
tests/logic/: ship_test.cpp
